src/assets/scss/03_organism/_contact-form.scss
.o-contact-form {
    @include clearfix();
    position: relative;
    display: none;

    &.-initial {
        display: block;

        fieldset {
            display: block;
        }
    }

    &.-active {
        display: block;
    }

    fieldset {
        display: none;

        &.-active {
            display: block;
        }

        label {
            @include font-size("small");

            @include breakpoints("tablet") {
                @include font-size(24px);
            }
        }
    }

    &__container {
        @include clearfix();
        position: relative;
        background: get-color("primary", "after-hours");
        margin: 80px 0;
        padding-left: 0;

        &.-light {
            background: get-color("primary", "white");
        }

        h6 {
            color: get-color("primary", "fresh");
            margin: 64px 0 8px;
            letter-spacing: 2px;
            font-weight: 600;

            @include breakpoints("tablet") {
                margin: 0 0 80px;
            }
        }


        &.-active {

            .-initial {
                display: none;
            }
        }
    }

    &__forms {
        display: none;

        &.-active {
            display: block;
        }
    }

    &__submitted {

        h1 {
            color: get-color("primary", "white");
        }

        p {
            color: get-color("neutral", "light-gray");
        }
    }

    &__buttons {
        margin-top: 80px;
        margin-bottom: 4px;

        &.-space {
            padding: 0 56px;
        }

        .a-button {
            margin-right: 60px;
        }

        button {
            display: none;

            &.-active {
                display: inline-block;
            }
        }
    }

    &__progress {
        background: get-color("primary", "fresh");
        position: absolute;
        top: 0;
        left: 0;
        height: 4px;
        width: 100%;
        -webkit-transition: width 1s ease-in-out;
        -moz-transition: width 1s ease-in-out;
        -o-transition: width 1s ease-in-out;
        transition: width 1s ease-in-out;
    }

    header {
        @include font-size(30px);
        color: get-color("primary", "white");

        @include breakpoints("tablet") {
            @include font-size("medium-large");
        }

        &.-light {
            color: get-color("primary", "after-hours");
        }
    }

    .o-rhythm__container {
        overflow: hidden;
    }

    .typeform-widget {
        height: 100vh;
        background: get-color("primary", "after-hours");
    }

    #root {
        background: get-color("primary", "after-hours");
    }
}

.animate-appear {
    opacity: 0.01;
}

.animate-appear.animate-appear-active {
    opacity: 1;
    transition: opacity .5s ease-in;
}

.animate-enter {
    position: relative;
    opacity: 0.01;
    left: -100%;
  }

  .animate-enter.animate-enter-active {
    opacity: 1;
    transition: all 500ms ease-in;
    left: 0;
  }

  .animate-leave {
    opacity: 1;
  }

  .animate-leave.animate-leave-active {
    opacity: 0.01;
    transition: opacity 300ms ease-in;
  }

